--- a/web/css/site.css
+++ b/web/css/site.css
@@ -3,6 +3,7 @@ body {
     height: 100%;
 }
 
+/*
 .wrap {
     min-height: 100%;
     height: auto;
@@ -12,7 +13,7 @@ body {
 
 .wrap > .container {
     padding: 70px 15px 20px;
-}
+} */
 
 .footer {
     height: 60px;
